--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <hr>
           </div>
           <div class="col-lg-12 my-auto">
-            <a href="https://www.google.com/" class="btn btn-primary btn-xl">Find Out More</a>
+            <a href="http://vnu-vn.academia.edu/%C4%90%E1%BA%A1tMaiC%C3%B4ng" class="btn btn-primary btn-xl">Find Out More</a>
           </div>
         </div>
       </div>
